# qding_backend

./: README.md  build.sh  manage.py  pyproject.toml  render.yaml
answers/: admin.py  models.py
answers/migrations/: 0001_initial.py  0002_alter_answer_question.py
comments/: admin.py  models.py
comments/migrations/: 0001_initial.py  0002_comment_content_comment_creator.py  0003_alter_comment_content.py
common/: models.py  serializers.py  views.py
medias/: admin.py  models.py  serializers.py  urls.py  views.py
medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_category.py  0004_alter_photo_category.py
qding/: asgi.py  settings.py  urls.py  wsgi.py
qnas/: admin.py  models.py  serializers.py  urls.py
qnas/migrations/: 0001_initial.py  0002_initial.py  0002_question_view_count.py  0003_alter_question_view_count.py  0003_questioncomment_answercomment.py  0004_alter_question_content.py  0004_remove_answer_votes_remove_question_votes_and_more.py  0005_questionvote_target_updated.py  0005_tag_remove_question_view_count_alter_answer_views_and_more.py  0006_question_notification_user.py  0006_question_tag.py  0007_answervote.py  0007_tag_description_tag_name.py  0008_alter_question_notification_user.py  0008_alter_tag_description_alter_tag_name.py  0009_alter_question_notification_user.py  0009_tag_creator.py  0010_alter_question_tag.py  0011_rename_votes_answervote_vote_type_and_more.py  0012_answer_notification_user.py
questions/: admin.py  models.py
users/: admin.py  function.py  models.py  serializers.py  urls.py  views.py
(+51 files in other folders)
