[tool.poetry]
name = "qding-backend"
version = "0.1.0"
description = ""
authors = ["bak-u-jin <87050600+bakujinDev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "qding_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
