[tool.poetry]
name = "qding-backend"
version = "0.1.0"
description = ""
authors = ["bak-u-jin <87050600+bakujinDev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "qding_backend"}]

[tool.poetry.dependencies]
python = "^3.9.10"
django = "^4.1.7"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.2.2"
django-cors-headers = "^3.13.0"
django-environ = "^0.9.0"
dj-database-url = "^1.2.0"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
